--- a/client.html
+++ b/client.html
@@ -1,41 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
   <style>
-    textarea {
-      vertical-align: bottom;
+    body {
+      --primary-color: #1a1a1a;
+      --secondary-color: #333333;
+      --tertiary-color: #4d4d4d;
+
+      background-color: var(--primary-color);
+      font-family: sans-serif;
+      display: flex;
+      flex-direction: column;
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      color: white;
     }
-    #output {
-      overflow: auto;
+    .container {
+      flex-grow: 1;
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+      padding: 1rem;
     }
-    #output > p {
-      overflow-wrap: break-word;
+    .chatroom {
+      display: flex;
+      flex-direction: column;
+      width: 66%;
+      align-items: stretch;
+      background-color: var(--secondary-color);
+      padding: 1rem;
+      border-radius: 15px;
     }
-    #output span {
-      color: blue;
+    .debug {
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      background-color: var(--secondary-color);
+      padding: 1rem;
+      border-radius: 15px;
+      overflow-y: auto;
     }
-    #output span.error {
-      color: red;
+    .message-container {
+      display: flex;
+      flex-direction: column-reverse;
+      height: 300px;
+      overflow-y: auto;
+      flex-grow: 1;
+      margin-bottom: 1rem;
+      border: 1px solid var(--tertiary-color);
+      border-radius: 10px;
+      padding: 1rem;
+    }
+    .message-container p {
+      margin: 0;
+      border-radius: 5px;
+      padding: 0.5rem;
+    }
+    .message-container p:nth-child(odd) {
+      background-color: var(--tertiary-color);
+    }
+    .text-center {
+      text-align: center;
+    }
+    .output {
+      font-size: 0.75rem;
+      display: flex;
+      flex-direction: column-reverse;
+      overflow-y: auto;
+      flex-grow: 1;
+      margin-bottom: 1rem;
+      border: 1px solid var(--tertiary-color);
+      border-radius: 10px;
+      padding: 1rem;
+    }
+    .output p {
+      margin: 0;
+    }
+    .send-container {
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+    }
+    .message-input {
+      flex-grow: 1;
+      resize: none;
+      border-radius: 5px;
+      padding: .5rem;
+      background-color: var(--tertiary-color);
+      color: white;
+      border: none;
+    }
+    .send-button {
+      border-radius: 5px;
+      padding: 1rem;
+      background-color: var(--tertiary-color);
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    .send-button:hover {
+      background-color: var(--primary-color);
     }
   </style>
   <body>
-    <h2>WebSocket Test</h2>
-    <textarea cols="60" rows="6"></textarea>
-    <button>send</button>
-    <div id="output"></div>
+    <h2 class="text-center">WebSocket Chatroom</h2>
+    <div class="container">
+      <main class="chatroom">
+        <h2>Chat</h2>
+        <div class="message-container"></div>
+        <form onsubmit="onClickButton" class="send-container">
+          <input class="message-input" cols="60" rows="3"></textarea>
+          <button class="send-button" type="submit">
+            Send
+          </button>
+        </form>
+      </main>
+      <aside class="debug">
+        <h2>WebSocket Messages</h2>
+        <div id="output" class="output"></div>
+      </aside>
+    </div>
   </body>
   <script>
-    // http://www.websocket.org/echo.html
     const button = document.querySelector("button");
     const output = document.querySelector("#output");
-    const textarea = document.querySelector("textarea");
-    const wsUri = "ws://127.0.0.1/";
+    const wsUri = "ws://127.0.0.1:8080";
     const websocket = new WebSocket(wsUri);
 
     button.addEventListener("click", onClickButton);
 
     websocket.onopen = (e) => {
       writeToScreen("CONNECTED");
-      doSend("WebSocket rocks");
     };
 
     websocket.onclose = (e) => {
@@ -43,26 +138,46 @@
     };
 
     websocket.onmessage = (e) => {
-      writeToScreen(`<span>RESPONSE: ${e.data}</span>`);
+      const data = JSON.parse(e.data);
+      if (data.action === "message") {
+        writeToMessageContainer(data.data);
+      }
+      writeToScreen(`RECEIVED: ${e.data}`);
     };
 
     websocket.onerror = (e) => {
       writeToScreen(`<span class="error">ERROR:</span> ${e.data}`);
     };
 
-    function doSend(message) {
+    function sendChatMessage(message) {
       writeToScreen(`SENT: ${message}`);
       websocket.send(message);
     }
 
     function writeToScreen(message) {
-      output.insertAdjacentHTML("afterbegin", `<p>${message}</p>`);
+      const debugOutput = document.querySelector(".output");
+      debugOutput.insertAdjacentHTML("afterbegin", `<p>${message}</p>`);
     }
 
-    function onClickButton() {
-      const text = textarea.value;
+    function writeToMessageContainer(message) {
+      const messageContainer = document.querySelector(".message-container");
+      messageContainer.insertAdjacentHTML("afterbegin", `<p>${message}</p>`);
+    }
 
-      doSend(text);
+    function onClickButton(e) {
+      e.preventDefault();
+      const textarea = document.querySelector(".message-input");
+      const text = textarea.value;
+      if (!text) return;
+
+      writeToMessageContainer(text);
+      sendChatMessage(
+        JSON.stringify({
+          action: "message",
+          data: text,
+        })
+      );
+
       textarea.value = "";
       textarea.focus();
     }
